--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,37 @@
 #version: '3'
+#
 #services:
 #  db:
-#    image: postgres
+#    image: postgres:13
 #    environment:
-#      POSTGRES_DB: bin_service
-#      POSTGRES_USER: user
-#      POSTGRES_PASSWORD: password
+#      POSTGRES_DB: ${DATABASE_NAME}
+#      POSTGRES_USER: ${DATABASE_USER}
+#      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
 #    volumes:
-#      - db_data:/var/lib/postgresql/data
-#
-#  cache:
-#    image: redis
+#      - postgres_data:/var/lib/postgresql/data
 #
 #  web:
 #    build: .
-#    command: python bin_service/manage.py runserver 0.0.0.0:8000
+#    command: python manage.py runserver 0.0.0.0:8000
 #    volumes:
-#      - ./bin_service:/code/bin_service
+#      - ./bin_service:/code
 #    ports:
 #      - "8000:8000"
 #    depends_on:
 #      - db
-#      - cache
+#    environment:
+#      - DATABASE_NAME=${DATABASE_NAME}
+#      - DATABASE_USER=${DATABASE_USER}
+#      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+#      - DATABASE_HOST=db
+#      - DATABASE_PORT=5432
+#      - SECRET_KEY=${SECRET_KEY}
+#      - DEBUG=1
+#      - ALLOWED_HOSTS=localhost,127.0.0.1
 #
 #volumes:
-#  db_data:
+#  postgres_data:
 
-# docker-compose.yml
 version: '3'
 
 services:
@@ -39,15 +44,21 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  web:
+  redis:
+    image: redis:alpine
+    ports:
+      - "6380:6379"  # Change this line
+
+  web1:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./bin_service:/code
     ports:
-      - "8000:8000"
+      - "8001:8000"
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_NAME=${DATABASE_NAME}
       - DATABASE_USER=${DATABASE_USER}
@@ -55,8 +66,42 @@ services:
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
       - SECRET_KEY=${SECRET_KEY}
-      - DEBUG=1
+      - DEBUG=${DEBUG}
       - ALLOWED_HOSTS=localhost,127.0.0.1
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+
+  web2:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./bin_service:/code
+    ports:
+      - "8002:8000"
+    depends_on:
+      - db
+      - redis
+    environment:
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_HOST=db
+      - DATABASE_PORT=5432
+      - SECRET_KEY=${SECRET_KEY}
+      - DEBUG=${DEBUG}
+      - ALLOWED_HOSTS=localhost,127.0.0.1
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8080:80"
+    depends_on:
+      - web1
+      - web2
 
 volumes:
   postgres_data:
