--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,11 @@
-events { }
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
+
 http {
-    upstream web_backend {
+    upstream django {
         server web1:8000;
         server web2:8000;
     }
@@ -9,7 +14,11 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://web_backend;
+            proxy_pass http://django;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
