--- a/bin_service/requirements.txt
+++ b/bin_service/requirements.txt
@@ -1,6 +1,42 @@
-Django>=3.2,<4.0
-djangorestframework
-psycopg2-binary
-redis
-django-redis
-requests
+asgiref==3.8.1
+attrs==23.2.0
+automium==0.2.6
+automium_web==0.1.1
+blinker==1.8.2
+cattrs==23.2.3
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+Django==5.0.4
+django-cors-headers==4.3.1
+django-filter==24.2
+django-redis==5.4.0
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+docstring-to-markdown==0.15
+drf-yasg==1.21.7
+Flask==3.0.3
+idna==3.7
+inflection==0.5.1
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+legacy==0.1.7
+lsprotocol==2023.0.1
+MarkupSafe==2.1.5
+packaging==24.0
+paho-mqtt==2.1.0
+parso==0.8.4
+psycopg2-binary==2.9.9
+pygls==1.3.1
+PyJWT==2.8.0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.7
+requests==2.32.3
+setuptools==69.5.1
+sqlparse==0.5.0
+uritemplate==4.1.1
+urllib3==2.2.2
+Werkzeug==3.0.3
